# 5g-phy-ci-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh  visual_test_demo.py
.github/workflows/: ci.yml
radio_sim/: __init__.py  __main__.py  main.py  ofdm.py
robot/: simulation_tests.robot  simulation_tests_docker.robot
robot-results/: log.html  output.xml  report.html
tests/: __init__.py  test_main.py  test_ofdm.py
